Fixed scroll z-index

--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -3772,6 +3772,3 @@ border1px {
 .popupEntriesDiv .listSearchTd {
   width: 57px;
 }
-.ps__rail-x, .ps__rail-y, .ps__thumb-x {
-  z-index: 10000;
-}
